Added the basic weakening menu actions